<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings">
    </item>
    <item android:id="@+id/zoomIn" android:title="@string/zoomout"></item>
    <item android:id="@+id/zoomOut" android:title="@string/zoomin"></item>
    <item android:id="@+id/zoomNormal" android:title="@string/reset"></item>
    <item android:id="@+id/rotateright" android:title="@string/rotateright"></item>
    <item android:id="@+id/rotateleft" android:title="@string/rotateleft"></item>
    <item android:id="@+id/invert" android:title="@string/invert"></item>
    	<item android:id="@+id/faster" android:title="@string/faster"></item>
    	<item android:id="@+id/slower" android:title="@string/slower"></item>
<!--     <group android:id="@+id/timerGroup" android:menuCategory="alternative">
    	</group>
 -->
    	<item android:id="@+id/clearResultlist" android:title="@string/clearResultList"></item>
 </menu>
